--- a/index.html
+++ b/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,800&family=Cormorant+Infant:ital@1&family=Overpass&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Crest Skateboard Club</title>
 </head>
-<body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<body>
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-12">
+                <!--Navigation bar-->
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <div class="container-fluid navigationBar ">
+                        <a class="navbar-brand" href="#">
+                            <img id="logoHeader" src="images/logo.png" alt="logo">
+                            Crest Skateboard Club</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
+                            <ul class="navbar-nav">
+                                <li class="nav-item m-lg-3">
+                                    <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                                </li>
+                                <li class="nav-item m-lg-3">
+                                    <a class="nav-link" href="#">Actualités</a>
+                                </li>
+                                <li class="nav-item m-lg-3">
+                                    <a class="nav-link" href="#">Evénements</a>
+                                </li>
+                                <li class="nav-item dropdown m-lg-3">
+                                    <a class="nav-link dropdown-toggle" href="#" id="lessonsDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Les Cours
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="lessonsDropdown">
+                                        <li><a class="dropdown-item" href="#">Jusqu'à 9 ans</a></li>
+                                        <li><a class="dropdown-item" href="#">A partir de 10 ans</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
+
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
