Add footer to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -112,9 +113,13 @@
             <div class="row" id="presentation">
                 <div class="col-12">
                     <h1 id="presentationTitle">La passion du Skateboard</h1>
-                    <p>Le Crest Skateboard Club est une association crée le 26 Octobre 2016 et ayant pour but de promouvoir le Skateboard. Nous cherchons avant tout à offrir aux jeunes de Crest et des alentours, un endroit sécurisé et bienveillant pour l'apprentissage de ce sport. 
-                        Le Skateboard Club de Crest est une association vivante. En effet, nous proposons régulièrement des événements afin de réunir grands et petits autour de la même passion du skate. 
-                        Nos cours sont proposés par des moniteurs diplômés du Brevet d'Initiateur Fédéral opriton Skateboard. 
+                    <p>Le Crest Skateboard Club est une association crée le 26 Octobre 2016 et ayant pour but de
+                        promouvoir le Skateboard. Nous cherchons avant tout à offrir aux jeunes de Crest et des
+                        alentours, un endroit sécurisé et bienveillant pour l'apprentissage de ce sport.
+                        Le Skateboard Club de Crest est une association vivante. En effet, nous proposons régulièrement
+                        des événements afin de réunir grands et petits autour de la même passion du skate.
+                        Nos cours sont proposés par des moniteurs diplômés du Brevet d'Initiateur Fédéral opriton
+                        Skateboard.
                     </p>
                 </div>
             </div>
@@ -127,10 +132,12 @@
                         <div class="card-body">
                             <h3 class="card-title">Les Cours</h3>
                             <p class="card-text">
-                                Retrouvez les horaires de nos cours de Skateboard. Deux groupes sont distingués: "Jusqu'à 9 ans" et "A partir de 10 ans"
-                                pour plus de facilité. Nous vous présentons également l'intégralité de notre équipe de moniteurs.
+                                Retrouvez les horaires de nos cours de Skateboard. Deux groupes sont distingués:
+                                "Jusqu'à 9 ans" et "A partir de 10 ans"
+                                pour plus de facilité. Nous vous présentons également l'intégralité de notre équipe de
+                                moniteurs.
                             </p>
-                            <a href="#" class="btn btn-secondary">Accéder aux cours ...</a>
+                            <a href="#" class="btn cardButton">Accéder aux cours ...</a>
                         </div>
                     </div>
                 </div>
@@ -140,10 +147,12 @@
                         <div class="card-body">
                             <h3 class="card-title">Nos Evénements</h3>
                             <p class="card-text">
-                                Retrouvez tous nos événements passés ou à venir ! Concerts, contests de Skateboard, journée spécial Kidz... Il y en a pour tous les goûts. 
-                                Participer aux événements du club c'est à la fois profiter un moment de partage et de bonne humeur, mais aussi soutenir l'association ! 
+                                Retrouvez tous nos événements passés ou à venir ! Concerts, contests de Skateboard,
+                                journée spécial Kidz... Il y en a pour tous les goûts.
+                                Participer aux événements du club c'est à la fois profiter un moment de partage et de
+                                bonne humeur, mais aussi soutenir l'association !
                             </p>
-                            <a href="#" class="btn btn-secondary">Accéder aux événements ...</a>
+                            <a href="#" class="btn cardButton">Accéder aux événements ...</a>
                         </div>
                     </div>
                 </div>
@@ -153,16 +162,43 @@
                         <div class="card-body">
                             <h3 class="card-title">Les actualités de l'association</h3>
                             <p class="card-text">
-                                Ici, vous pouvez retrouver toutes nos actualités ! Des nouveaux moniteurs à l'Assemblée Générale de l'association, en passant par nos divers projets pour le 
-                                Skatepark en liens avec la Mairie de Crest. 
+                                Ici, vous pouvez retrouver toutes nos actualités ! Des nouveaux moniteurs à l'Assemblée
+                                Générale de l'association, en passant par nos divers projets pour le
+                                Skatepark en liens avec la Mairie de Crest.
                             </p>
-                            <a href="#" class="btn btn-secondary">Accéder aux actualités ...</a>
+                            <a href="#" class="btn cardButton">Accéder aux actualités ...</a>
                         </div>
                     </div>
                 </div>
             </div>
-            
         </main>
+
+        <!--Footer-->
+        <div class="row">
+            <div class="col-12 cols-lg-4">
+                <footer>
+                    <div class="footerList">
+                        <ul>
+                            <li><h4>Crest Skateboard Club</h4></li>
+                            <li><adresse>Quai Soubeyran 26400 CREST</adresse></li>
+                            <li><a href="mailto:crestskateboardclub@gmail.com">Contactez-nous</a></li>
+                            <li>
+                                <img id="footerLogo" src="images/logo.png" alt="logo du club">
+                            </li>
+                            <li><ul class="icons">
+                                <li><a href="https://www.facebook.com/CrestSkateboardClub"><i class="bi bi-facebook"></i></a></li>
+                                <li><a href="https://www.instagram.com/crestskateboardclub/"><i class="bi bi-instagram"></i></a></li>
+                            </ul></li>
+                        </ul>
+                    </div>
+                    <div class="legalMentions">
+                        <p>©2021 Crest Skateboard Club - Tous Droits Réservés</p>
+                        <p>Site Web développé par Louise Le Ray</p>
+                    </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
