Add events.html file with header & footer, added links to the page on index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <a class="nav-link" href="#">Actualités</a>
                                 </li>
                                 <li class="nav-item m-lg-3">
-                                    <a class="nav-link" href="#">Evénements</a>
+                                    <a class="nav-link" href="events.html">Evénements</a>
                                 </li>
                                 <li class="nav-item dropdown m-lg-3">
                                     <a class="nav-link dropdown-toggle" href="#" id="lessonsDropdown" role="button"
@@ -152,7 +152,7 @@
                                 Participer aux événements du club c'est à la fois profiter un moment de partage et de
                                 bonne humeur, mais aussi soutenir l'association !
                             </p>
-                            <a href="#" class="btn cardButton">Accéder aux événements ...</a>
+                            <a href="events.html" class="btn cardButton">Accéder aux événements ...</a>
                         </div>
                     </div>
                 </div>
