--- a/events.html
+++ b/events.html
@@ -196,40 +196,63 @@
         </div>
     </div>
 
-    <!--Footer-->
-    <div class="row">
-        <div class="col-12 cols-lg-4">
-            <footer>
-                <div class="footerList">
-                    <ul>
-                        <li>
-                            <h4>Crest Skateboard Club</h4>
+       <!--Footer-->
+       <footer class="text-center">
+        <div class="container-fluid p-4">
+            <div class="row p-4 d-flex  justify-content-lg-around">
+                <div class="col-lg-3 mb-4">
+                    <div class="align-items-center mb-5 mx-auto">
+                        <img src="images/logo.png" height="80" alt="le logo du club" />
+                    </div>
+                    <p>Association de skateboard, à Crest (26).</p>
+                    <ul class="list-inline justify-content-center">
+                        <li class="list-inline-item p-2">
+                            <a href="https://www.facebook.com/CrestSkateboardClub"><i class="bi bi-facebook fs-2"></i></a>
                         </li>
-                        <li>
-                            <adresse>Quai Soubeyran 26400 CREST</adresse>
+                        <li class="list-inline-item p-2">
+                            <a href="https://www.instagram.com/crestskateboardclub/"><i class="bi bi-instagram fs-2"></i></a>
                         </li>
-                        <li><a href="mailto:crestskateboardclub@gmail.com">Contactez-nous</a></li>
-                        <li>
-                            <img id="footerLogo" src="images/logo.png" alt="logo du club">
+                    </ul>
+
+                </div>
+                <div class="col-lg-3 mb-4 ">
+                    <ul class="list-unstyled">
+                        <li class="mb-2 mb-lg-4">
+                            <a href="index.html" aria-current="page">Accueil</a>
                         </li>
-                        <li>
-                            <ul class="icons">
-                                <li><a href="https://www.facebook.com/CrestSkateboardClub"><i
-                                            class="bi bi-facebook"></i></a></li>
-                                <li><a href="https://www.instagram.com/crestskateboardclub/"><i
-                                            class="bi bi-instagram"></i></a></li>
-                            </ul>
+                        <li class="mb-2 mb-lg-4">
+                            <a href="#">Actualités</a>
+                        </li>
+                        <li class="mb-2 mb-lg-4">
+                            <a href="events.html">Evénements</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Les Cours</a>
                         </li>
                     </ul>
                 </div>
-                <div class="legalMentions">
-                    <p>©2021 Crest Skateboard Club - Tous Droits Réservés</p>
-                    <p>Site Web développé par Louise Le Ray</p>
+
+                <div class="col-lg-3 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-4">Contact</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <p><i class="bi bi-geo-alt-fill pe-2"></i>Quai Soubeyran 26400 CREST</p>
+                        </li>
+                        <li>
+                            <p>06.22.63.45.79</p>
+                        </li>
+                        <li>
+                            <a href="mailto:crestskateboardclub@gmail.com">crestskateboardclub@gmail.com</a>
+                        </li>
+                    </ul>
                 </div>
+            </div>
         </div>
-        </footer>
-    </div>
-    </div>
+        <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2)">
+            <p>© 2021 - Tous droits réservés <br> Site web développé par Louise Le Ray</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
