--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
                         <div class="card-body">
                             <h3 class="card-title">Les Cours</h3>
                             <p class="card-text">
-                                Retrouvez les horaires et tarifs de nos cours de Skateboard. Deux groupes sont distingués:
-                                "Jusqu'à 9 ans" et "A partir de 10 ans" pour plus de facilité. Nous vous présentons également l'intégralité de notre équipe de
+                                Retrouvez les horaires et tarifs de nos cours de Skateboard. Deux groupes sont
+                                distingués:
+                                "Jusqu'à 9 ans" et "A partir de 10 ans" pour plus de facilité. Nous vous présentons
+                                également l'intégralité de notre équipe de
                                 moniteurs.
                             </p>
                             <a href="#" class="btn cardButton">Accéder aux cours ...</a>
@@ -145,7 +147,8 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="card">
-                        <img id="imgCard" src="images/evenementsCard.png" class="card-img-top" alt="un événement du club">
+                        <img id="imgCard" src="images/evenementsCard.png" class="card-img-top"
+                            alt="un événement du club">
                         <div class="card-body">
                             <h3 class="card-title">Nos Evénements</h3>
                             <p class="card-text">
@@ -173,68 +176,100 @@
                     </div>
                 </div>
             </div>
-        
-    
-        <!--article video -->
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <article id="meetTheClub">
-                    <h2>Rencontre avec le Skate Club</h2>
-                    <video width="390" controls>
-                        <source src="images/video-skate-club.mp4" type="video/mp4">
-                        <source src="images/video-skate-club.webm" type="video/webm">
-                        Toutes nos excuses, votre navigateur ne permet pas l'affichage de cette vidéo.
-                    </video>
-                    <p>Vidéo par "Le Bec Magazine", tournée en 2019.</p>
-                </article>
-            </div>
-            <!--Article general assembly report-->
-            <div class="col-12 col-lg-6">
-                <article>
-                    <h2>Bilan de l'Assemblée Générale</h2>
-                    <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" width="390" height="350"></object>
-                    <p>Voici le Bilan Moral suite à l'Assemblée Générale qui s'est tenue le 29 Octobre 2021.</p>
-                </article>
-            </div>
+
+
+            <!--article video -->
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <article id="meetTheClub">
+                        <h2>Rencontre avec le Skate Club</h2>
+                        <video width="390" controls>
+                            <source src="images/video-skate-club.mp4" type="video/mp4">
+                            <source src="images/video-skate-club.webm" type="video/webm">
+                            Toutes nos excuses, votre navigateur ne permet pas l'affichage de cette vidéo.
+                        </video>
+                        <p>Vidéo par "Le Bec Magazine", tournée en 2019.</p>
+                    </article>
+                </div>
+                <!--Article general assembly report-->
+                <div class="col-12 col-lg-6">
+                    <article>
+                        <h2>Bilan de l'Assemblée Générale</h2>
+                        <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" width="390"
+                            height="350"></object>
+                        <p>Voici le Bilan Moral suite à l'Assemblée Générale qui s'est tenue le 29 Octobre 2021.</p>
+                    </article>
+                </div>
         </main>
+
         <!--Footer-->
-        <div class="row">
-            <div class="col-12 ">
-                <footer>
-                    <div class="footerList">
-                        <ul>
-                            <li>
-                                <h4>Crest Skateboard Club</h4>
+        <footer class="text-center">
+            <div class="container-fluid p-4">
+                <div class="row p-4 d-flex  justify-content-lg-around">
+                    <div class="col-lg-3 mb-4">
+                        <div class="align-items-center mb-5 mx-auto">
+                            <img src="images/logo.png" height="80" alt="le logo du club" />
+                        </div>
+                        <p>Association de skateboard, à Crest (26).</p>
+                        <ul class="list-inline justify-content-center">
+                            <li class="list-inline-item p-2">
+                                <a href="https://www.facebook.com/CrestSkateboardClub"><i class="bi bi-facebook fs-2"></i></a>
                             </li>
-                            <li>
-                                <adresse>Quai Soubeyran 26400 CREST</adresse>
+                            <li class="list-inline-item p-2">
+                                <a href="https://www.instagram.com/crestskateboardclub/"><i class="bi bi-instagram fs-2"></i></a>
                             </li>
-                            <li><a href="mailto:crestskateboardclub@gmail.com">Contactez-nous</a></li>
-                            <li>
-                                <img id="footerLogo" src="images/logo.png" alt="logo du club">
+                        </ul>
+
+                    </div>
+                    <div class="col-lg-3 mb-4 ">
+                        <ul class="list-unstyled">
+                            <li class="mb-2 mb-lg-4">
+                                <a href="index.html" aria-current="page">Accueil</a>
                             </li>
-                            <li>
-                                <ul class="icons">
-                                    <li><a href="https://www.facebook.com/CrestSkateboardClub"><i
-                                                class="bi bi-facebook"></i></a></li>
-                                    <li><a href="https://www.instagram.com/crestskateboardclub/"><i
-                                                class="bi bi-instagram"></i></a></li>
-                                </ul>
+                            <li class="mb-2 mb-lg-4">
+                                <a href="#">Actualités</a>
+                            </li>
+                            <li class="mb-2 mb-lg-4">
+                                <a href="events.html">Evénements</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Les Cours</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="legalMentions">
-                        <p>©2021 Crest Skateboard Club - Tous Droits Réservés</p>
-                        <p>Site Web développé par Louise Le Ray</p>
-                    </div>
-            </div>
-            </footer>
-        </div>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+                    <div class="col-lg-3 mb-4 mb-md-0">
+                        <h5 class="text-uppercase mb-4">Contact</h5>
+
+                        <ul class="list-unstyled">
+                            <li>
+                                <p><i class="bi bi-geo-alt-fill pe-2"></i>Quai Soubeyran 26400 CREST</p>
+                            </li>
+                            <li>
+                                <p>06.22.63.45.79</p>
+                            </li>
+                            <li>
+                                <a href="mailto:crestskateboardclub@gmail.com">crestskateboardclub@gmail.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2)">
+                <p>© 2021 - Tous droits réservés <br> Site web développé par Louise Le Ray</p>
+            </div>
+        </footer>
+
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
