--- a/events.html
+++ b/events.html
@@ -61,8 +61,8 @@
             </div>
         </div>
         <div class="row-col-12">
-            <article>
-                <h1>Les événements du club</h1>
+            <article class="mt-4 p-2">
+                <h1 class="p-2">Les événements du club</h1>
                 <p>Contests de skate, journée d'Halloween, concerts ... Retrouvez ici tous les événements organisés par
                     l'association. N'hésitez pas
                     à remplir notre formulaire d'inscription afin de compter parmis les prochains participants aux
@@ -73,19 +73,19 @@
         <!--card event n°1-->
         <div class="row">
             <div class="col-12 col-lg-6">
-                <div class="card cardEvent">
-                    <h2 class="card-title">La journée "Skate Kids"</h2>
+                <div class="card mt-3">
+                    <h2 class="card-title p-2">La journée "Skate Kids"</h2>
                     <img src="images/skateKidz.png" class="card-img-top" alt="affiche de l'événement SkateKids">
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             <i class="bi bi-geo-alt-fill"></i>
                             Au Skate-Park de Crest : Quai Soubeyran
                         </p>
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             <i class="bi bi-calendar2-week-fill"></i>
                             Le 05 Juin 2021
                         </p>
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             Journée pleine d'animations prévue au skate-park pour les jeunes de 7 à 18 ans. Au
                             programme: contests de skateboard
                             pour toutes catégories (7/11ans, 12/14 ans, 15/18 ans et filles). Enormément de lots à
@@ -95,7 +95,7 @@
                             remise des prix, puis, un DJ vous divertira jusqu'à la nuit tombée. <br> <i>Incription : 5€,
                                 sur place dès 11h.</i>
                         </p>
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             <i class="bi bi-envelope-fill"></i>
                             <a href="mailto:crestskateboardclub@gmail.com">crestskateboardclub@gmail.com</a>
                         </p>
@@ -106,25 +106,25 @@
             </div>
             <!--card event n°2-->
             <div class="col-12 col-lg-6">
-                <div class="card cardEvent">
-                    <h2 class="card-title">Le Local Crash Constest</h2>
+                <div class="card mt-3">
+                    <h2 class="card-title p-2">Le Local Crash Constest</h2>
                     <img src="images/localCrashContest.png" class="card-img-top" alt="affiche de l'événement SkateKids">
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             <i class="bi bi-geo-alt-fill"></i>
                             Au Skate-Park de Crest : Quai Soubeyran
                         </p>
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             <i class="bi bi-calendar2-week-fill"></i>
                             Le 28 Mars 2021
                         </p>
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             De <b>18h à minuit</b> au Skate-Park de Crest, venez vous affronter dans un contest de skate ! Différentes catégories
                             seront récompensées, parmis lesquelles: le plus long Ollie ou encore le meilleur "tricks". Pour vous accompagner, un DJ jouera
                             toute la soirée, et comme d'habitude, vous pourrez vous rafraîchir à notre buvette. L'inscription est requise pour participer,
                             mais gratuite, alors n'hésitez pas à venir montrer vos talents de skateur !!
                         </p>
-                        <p class="card-text">
+                        <p class="card-text my-3">
                             <i class="bi bi-envelope-fill"></i>
                             <a href="mailto:crestskateboardclub@gmail.com">crestskateboardclub@gmail.com</a>
                         </p>
@@ -138,13 +138,13 @@
     <div class="row">
         <!--Ad for event of the club-->
         <div class="col-12 col-lg-6">
-            <aside>
+            <aside class="d-flex justify-content-center mt-3">
                 <img id="eventAd" src="images/AG.png" alt="pub pour l'assemblée générale de l'association">
             </aside>
         </div>
         <!--Ad for event of another club-->
         <div class="col-12 col-lg-6">
-            <aside>
+            <aside class="mt-3 d-flex justify-content-center">
                 <img id="eventAd" src="images/pub-event-asso.png"
                     alt="pub pour un événement d'une autre association de skateboard">
             </aside>
@@ -163,11 +163,11 @@
                 <div class="modal-body">
                     <form method="post" action="#">
                         <div class="form-group">
-                            <legend>Je suis : </legend>
+                            <legend class="fs-6">Je suis : </legend>
                             <input class="form-check-input" type="radio" id="girl" name="gender">
-                            <label class="form-check-label" for="girl" id="labelGender">Une skateuse</label>
-                            <input class="form-check-input" type="radio" id="boy" name="gender">
-                            <label class="form-check-label" for="boy" id="labelGender">Un skateur</label>
+                            <label class="form-check-label ms-2" for="girl" id="labelGender">Une skateuse</label>
+                            <input class="form-check-input ms-4" type="radio" id="boy" name="gender">
+                            <label class="form-check-label ms-2" for="boy" id="labelGender">Un skateur</label>
                             <br>
                             <label for="firstName">Prénom : </label>
                             <input type="text" class="form-control" id="firstName" placeholder="Luke">
@@ -197,7 +197,7 @@
     </div>
 
        <!--Footer-->
-       <footer class="text-center">
+       <footer class="text-center mt-4">
         <div class="container-fluid p-4">
             <div class="row p-4 d-flex  justify-content-lg-around">
                 <div class="col-lg-3 mb-4">
@@ -218,13 +218,13 @@
                 <div class="col-lg-3 mb-4 ">
                     <ul class="list-unstyled">
                         <li class="mb-2 mb-lg-4">
-                            <a href="index.html" aria-current="page">Accueil</a>
+                            <a href="index.html">Accueil</a>
                         </li>
                         <li class="mb-2 mb-lg-4">
                             <a href="#">Actualités</a>
                         </li>
                         <li class="mb-2 mb-lg-4">
-                            <a href="events.html">Evénements</a>
+                            <a href="events.html" aria-current="page">Evénements</a>
                         </li>
                         <li class="mb-2">
                             <a href="#">Les Cours</a>
