--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
                         <div class="carousel-item active">
                             <img src="images/skater.png" class="d-block w-100" alt="Un jeune skateur du club">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Bienvenue au Skateboard Club de Crest !</h2>
+                                <h2 class="p-2">Bienvenue au Skateboard Club de Crest !</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/evenements .png" class="d-block w-100" alt="Nos événements">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Suivez nos événements</h2>
+                                <h2 class="p-2">Suivez nos événements</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cours.png" class="d-block w-100"
                                 alt="Nos élèves et leur moniteur de skateboard">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Prenez des cours de Skateboard</h2>
+                                <h2 class="p-2">Prenez des cours de Skateboard</h2>
                             </div>
                         </div>
                     </div>
@@ -112,8 +112,8 @@
         <main>
             <div class="row">
                 <div class="col-12">
-                    <article>
-                        <h1>La passion du Skateboard</h1>
+                    <article class="mt-3 p-2">
+                        <h1 class="p-2">La passion du Skateboard</h1>
                         <p>Le Crest Skateboard Club est une association crée le 26 Octobre 2016 et ayant pour but de
                             promouvoir le Skateboard. Nous cherchons avant tout à offrir aux jeunes de Crest et des
                             alentours, un endroit sécurisé et bienveillant pour l'apprentissage de ce sport.
@@ -130,11 +130,11 @@
             <!--Cards to present the different pages-->
             <div class="row">
                 <div class="col-12 col-lg-4">
-                    <div class="card">
+                    <div class="card mt-3">
                         <img id="imgCard" src="images/cours-card.png" class="card-img-top" alt="un élève du club">
                         <div class="card-body">
                             <h3 class="card-title">Les Cours</h3>
-                            <p class="card-text">
+                            <p class="card-text my-3">
                                 Retrouvez les horaires et tarifs de nos cours de Skateboard. Deux groupes sont
                                 distingués:
                                 "Jusqu'à 9 ans" et "A partir de 10 ans" pour plus de facilité. Nous vous présentons
@@ -146,12 +146,12 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card">
+                    <div class="card mt-3">
                         <img id="imgCard" src="images/evenementsCard.png" class="card-img-top"
                             alt="un événement du club">
                         <div class="card-body">
                             <h3 class="card-title">Nos Evénements</h3>
-                            <p class="card-text">
+                            <p class="card-text my-3">
                                 Retrouvez tous nos événements passés ou à venir ! Concerts, contests de Skateboard,
                                 journée spécial Kidz... Il y en a pour tous les goûts.
                                 Participer aux événements du club c'est à la fois profiter un moment de partage et de
@@ -162,11 +162,11 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card">
+                    <div class="card mt-3">
                         <img id="imgCard" src="images/skatepark.png" class="card-img-top" alt="">
                         <div class="card-body">
                             <h3 class="card-title">Les actualités de l'association</h3>
-                            <p class="card-text">
+                            <p class="card-text my-3">
                                 Ici, vous pouvez retrouver toutes nos actualités ! Des nouveaux moniteurs à l'Assemblée
                                 Générale de l'association, en passant par nos divers projets pour le
                                 Skatepark en liens avec la Mairie de Crest.
@@ -181,8 +181,8 @@
             <!--article video -->
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <article id="meetTheClub">
-                        <h2>Rencontre avec le Skate Club</h2>
+                    <article class="mt-3 p-2" id="meetTheClub">
+                        <h2 class="p-2">Rencontre avec le Skate Club</h2>
                         <video width="390" controls>
                             <source src="images/video-skate-club.mp4" type="video/mp4">
                             <source src="images/video-skate-club.webm" type="video/webm">
@@ -193,8 +193,8 @@
                 </div>
                 <!--Article general assembly report-->
                 <div class="col-12 col-lg-6">
-                    <article>
-                        <h2>Bilan de l'Assemblée Générale</h2>
+                    <article class="mt-3 p-2">
+                        <h2 class="p-2">Bilan de l'Assemblée Générale</h2>
                         <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" width="390"
                             height="350"></object>
                         <p>Voici le Bilan Moral suite à l'Assemblée Générale qui s'est tenue le 29 Octobre 2021.</p>
@@ -203,7 +203,7 @@
         </main>
 
         <!--Footer-->
-        <footer class="text-center">
+        <footer class="text-center mt-4">
             <div class="container-fluid p-4">
                 <div class="row p-4 d-flex  justify-content-lg-around">
                     <div class="col-lg-3 mb-4">
@@ -239,7 +239,7 @@
                     </div>
 
                     <div class="col-lg-3 mb-4 mb-md-0">
-                        <h5 class="text-uppercase mb-4">Contact</h5>
+                        <h4 class="text-uppercase mb-4">Contact</h4>
 
                         <ul class="list-unstyled">
                             <li>
